infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netcommerce
  labels:
    app.kubernetes.io/part-of: netcommerce
